src/babel/__integration-tests__/preval-extract/__snapshots__/errors.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preval-extract babel plugin errors should throw error if "css" tagged template literal is not assigned to a variable 1`] = `
Command failed: node <<CWD>>/src/babel/__integration-tests__/__utils__/transpile.js '"css\`\\n  font-size: 3em;\\n\`;"' '{"pluginOptions":{"cache":false,"extract":false},"babelOptions":{"filename":"test.js"}}'
<<CWD>>/node_modules/babel-core/lib/transformation/file/index.js:590
      throw err;
      ^

SyntaxError: test.js: Couldn't determine the class name for CSS template literal. Ensure that it's either:
- Assigned to a variable
- Is an object property
- Is a prop in a JSX element
  1 | import css from '<<CWD>>/build/css.js';
  2 | 
> 3 |     css\`
    |     ^
  4 | font-size: 3em;
  5 | \`;
    at File.buildCodeFrameError (<<CWD>>/node_modules/babel-core/lib/transformation/file/index.js:427:15)
    at NodePath.buildCodeFrameError (<<CWD>>/node_modules/babel-traverse/lib/path/index.js:140:26)
    at PluginPass.TaggedTemplateExpression (<<CWD>>/build/babel/preval-extract/index.js:105:26)
    at newFn (<<CWD>>/node_modules/babel-traverse/lib/visitors.js:276:21)
    at NodePath._call (<<CWD>>/node_modules/babel-traverse/lib/path/context.js:76:18)
    at NodePath.call (<<CWD>>/node_modules/babel-traverse/lib/path/context.js:48:17)
    at NodePath.visit (<<CWD>>/node_modules/babel-traverse/lib/path/context.js:105:12)
    at TraversalContext.visitQueue (<<CWD>>/node_modules/babel-traverse/lib/context.js:150:16)
    at TraversalContext.visitSingle (<<CWD>>/node_modules/babel-traverse/lib/context.js:108:19)
    at TraversalContext.visit (<<CWD>>/node_modules/babel-traverse/lib/context.js:192:19)

`;

exports[`preval-extract babel plugin errors should throw error if "css.named" is not called with classname 1`] = `
Command failed: node <<CWD>>/src/babel/__integration-tests__/__utils__/transpile.js '"css.named\`\\n  font-size: 3em;\\n\`;"' '{"pluginOptions":{"cache":false,"extract":false},"babelOptions":{"filename":"test.js"}}'
<<CWD>>/node_modules/babel-core/lib/transformation/file/index.js:590
      throw err;
      ^

Error: test.js: Linaria's \`css.named\` must be called with a class name
    at isLinariaTaggedTemplate (<<CWD>>/build/babel/preval-extract/validators.js:22:11)
    at PluginPass.TaggedTemplateExpression (<<CWD>>/build/babel/preval-extract/index.js:88:72)
    at newFn (<<CWD>>/node_modules/babel-traverse/lib/visitors.js:276:21)
    at NodePath._call (<<CWD>>/node_modules/babel-traverse/lib/path/context.js:76:18)
    at NodePath.call (<<CWD>>/node_modules/babel-traverse/lib/path/context.js:48:17)
    at NodePath.visit (<<CWD>>/node_modules/babel-traverse/lib/path/context.js:105:12)
    at TraversalContext.visitQueue (<<CWD>>/node_modules/babel-traverse/lib/context.js:150:16)
    at TraversalContext.visitSingle (<<CWD>>/node_modules/babel-traverse/lib/context.js:108:19)
    at TraversalContext.visit (<<CWD>>/node_modules/babel-traverse/lib/context.js:192:19)
    at Function.traverse.node (<<CWD>>/node_modules/babel-traverse/lib/index.js:114:17)

`;

exports[`preval-extract babel plugin errors should throw error if the id was not found 1`] = `
Command failed: node <<CWD>>/src/babel/__integration-tests__/__utils__/transpile.js '"const title = css\`\\n  width: \${document.width};\\n\`;"' '{"pluginOptions":{"cache":false,"extract":false},"babelOptions":{"filename":"test.js"}}'
<<CWD>>/node_modules/babel-core/lib/transformation/file/index.js:590
      throw err;
      ^

SyntaxError: test.js: Linaria css evaluation error:
  Could not find a reference to 'document'.
  This might happen if you used some undeclared variable/function or a browser specific API.

  2 | 
  3 |     const title = css\`
> 4 | width: \${document.width};
    |          ^
  5 | \`;
    at File.buildCodeFrameError (<<CWD>>/node_modules/babel-core/lib/transformation/file/index.js:427:15)
    at NodePath.buildCodeFrameError (<<CWD>>/node_modules/babel-traverse/lib/path/index.js:140:26)
    at resolveSource (<<CWD>>/build/babel/preval-extract/resolveSource.js:31:16)
    at Object.Identifier (<<CWD>>/build/babel/preval-extract/index.js:46:48)
    at NodePath._call (<<CWD>>/node_modules/babel-traverse/lib/path/context.js:76:18)
    at NodePath.call (<<CWD>>/node_modules/babel-traverse/lib/path/context.js:48:17)
    at NodePath.visit (<<CWD>>/node_modules/babel-traverse/lib/path/context.js:105:12)
    at TraversalContext.visitQueue (<<CWD>>/node_modules/babel-traverse/lib/context.js:150:16)
    at TraversalContext.visitSingle (<<CWD>>/node_modules/babel-traverse/lib/context.js:108:19)
    at TraversalContext.visit (<<CWD>>/node_modules/babel-traverse/lib/context.js:192:19)

`;
